--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,6 @@
 
 @layer base {
     html {
-        font-family: "Quicksand", system-ui, sans-serif;
+        font-family: "Montserrat", system-ui, sans-serif;
     }
 }
