--- a/src/pages/authenticate/style.scss
+++ b/src/pages/authenticate/style.scss
@@ -1,7 +1,9 @@
 .glass-area {
-    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
-    backdrop-filter: blur(10px);
-    box-shadow: 0 8px 32px 0 rgba(255, 0, 167, 0.37);
+    // background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+    // background: linear-gradient(135deg, rgba(253, 253, 253), rgba(252, 252, 252, 0.5));
+    background: rgb(255, 255, 255);
+    backdrop-filter: blur(50px);
+    box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.37);
 }
 
 // .button-shadow {
