--- a/src/pages/chat/style.scss
+++ b/src/pages/chat/style.scss
@@ -220,3 +220,8 @@ li {
 .subnav-item:hover path {
     fill: #0F6D5E;
 }
+
+.farvorite-question {
+    overflow: auto;
+    scrollbar-width: none;
+}
